# vue-oxc-parser

./: Cargo.toml  README.md
benches/: parser_bench.rs
src/: lib.rs  parser.rs  semantic.rs  utils.rs
tests/: parser_test.rs
tests/fixtures/: ElTable.vue
tests/snapshots/: parser_test__parser_semantic_test.snap  parser_test__parser_test.snap  parser_test__parser_test.snap.new
