[package]
name = "vue-oxc-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
oxc_allocator = "0.98.0"
oxc_ast = "0.98.0"
oxc_codegen = "0.98.0"
oxc_parser = "0.98.0"
oxc_ast_visit = "0.98.0"
oxc_span = "0.98.0"
vue-compiler-core = "0.1.0"

[dev-dependencies]
insta = "1.44.0"
criterion = "0.7.0"

[[bench]]
name = "parser_bench"
harness = false
